Pin the template's textual invariants from this repo's own suite
CI compiling the template on JDK 25 proves the ecosystem supports it. It does
not prove the template is still correct as a template: a pom that quietly drops
back to Java 21, or grows a preview flag, or acquires a program name from this
tenant, still builds green. These six tests fail on all three, in 0.02s, with no
JDK involved.

The domain-agnostic check is the one worth keeping. It is the inverse of
guardrails.py's concern and a mirror of control-plane's own vocabulary grep:
this repo is expected to carry COBOL and CardDemo vocabulary, but the scaffold
every modernized program is seeded into must not, or the next tenant inherits
this one's program names.

Writing these found a real defect in the pom immediately: XML forbids a double
hyphen inside a comment, so the comment explaining that the preview flag stays
off was making the file not well-formed. With no JDK on this machine there was
nothing else that would have caught it before CI.

The Java-release assertion is confirmed falsifiable rather than trusted:
flipping the pin to 21 fails exactly that test and nothing else, with the
substitution asserted to have applied before the result was believed.